Pre-release
    - Integrated the unit tests with the main project, so now the unit tests
      are automatically compiled along with the examples, and can now be run
      by typing 'make test' or 'ctest'. Use 'GTEST_COLOR=1 ARGS="-V" make test'
      or 'GTEST_COLOR=1 ctest -V' for coloured verbose testing output.
    - CMake minimum required version bumped to 3.10 (3.12 for macOS) for
      automatic unit tests detection by CMake

Version 0.4.0 - November 28, 2020
    - Renamed 'master' branch to 'main'

Version 0.3.0 - June 10, 2020
    - Removed the Visual Studio solution (since it can be automatically
      generated by CMake), as we prefer to use CMake uniformly across all
      platforms
    - Minor fixes

Version 0.2.2 - January 16, 2020
    - Added additional RNG example project to Visual Studio solution

Version 0.2.1 - November 2, 2019 
    - Added support for RNGs from <oqs/rand.h>
    - Concurrent unit testing

Version 0.2.0 - October 8, 2019
    - Minor changes to accomodate for liboqs API changes

Version 0.1.2 - July 9, 2019
    - Added MSVC support for CMake
    - Updated Google Test to version 1.8.1
    - Bugfix in oqs::Signature::sign()

Version 0.1.1 - May 29, 2019
    - Minor API change in oqs_cpp.h: Signature::alg_details_::length_signature
      is replaced by Signature::alg_details_::max_length_signature

Version 0.1.0 - April 23, 2019
    - Initial release