@@ -5,6 +5,8 @@ Pre-release
       or 'GTEST_COLOR=1 ctest -V' for coloured verbose testing output.
     - CMake minimum required version bumped to 3.10 (3.12 for macOS) for
       automatic unit tests detection by CMake
+    - Switched continuous integration from Travis CI to CircleCI, we now support
+      macOS & Linux (CircleCI) and Windows (AppVeyor)
 
 Version 0.4.0 - November 28, 2020
     - Renamed 'master' branch to 'main'
